# log_aggregator

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  README.md
.cache/clangd/index/: byte_io.cpp.E3A343E91EE6F29D.idx  byte_io.hpp.82707C3CBC39C7BB.idx  consumer_manager.cpp.F4257BBDC4B48373.idx  consumer_manager.hpp.B11EFF6C22D6737D.idx  consumer_test.cpp.3F46B63591A2CCE3.idx  crash_simulation.cpp.4665AF8E4DF8885F.idx  crc32.cpp.F042933D81CDE958.idx  crc32.hpp.EEDABD20BEE16F3C.idx  durability.cpp.4B246173333C11BF.idx  durability.hpp.75CCBC08E4A297BF.idx  durability_manager.cpp.E52D1ADD75C20CE6.idx  durability_manager.hpp.AB4D30780AF1B6DD.idx  durability_mode.hpp.CCF40A9D37B967B3.idx  durability_test.cpp.8051E7F7D092B392.idx  durability_tests.cpp.CA58A800C48EBC33.idx  durable_log_writer.cpp.C40D3DD4BB3FB630.idx  durable_log_writer.hpp.7169ABEB1521364E.idx  irecord_codec.hpp.55E3DCC483DAA814.idx  log.cpp.789455AEE3EF0E99.idx  log.hpp.6A5E80B6A0062316.idx  log_reader.cpp.C8EC1B382574DC50.idx  log_reader.hpp.FE20CF1FA0BC9A64.idx  log_writer.cpp.534354D5DB8AE6D2.idx  log_writer.hpp.D9E0342AA76FBB23.idx  offset_store.cpp.ED18C8D205826649.idx  offset_store.hpp.24C4038DC58175CB.idx  record.cpp.5C6278A7D8DAE2DD.idx  record.hpp.4E350C53B745C533.idx  record_decode_status.hpp.A8AB406F0133C748.idx  recovery.cpp.BC5DE2FB7D076B19.idx  recovery.hpp.308791C7687A6666.idx  recovery_manager.cpp.80971CAFC928FCF8.idx  recovery_manager.hpp.D7A3E0E906D8F6C4.idx  recovery_tests.cpp.77E849B49111194A.idx  segment.cpp.4D0CC707D6B40803.idx  segment.hpp.2254595BF99628DC.idx  v1_binary_codec.cpp.1F8812B1F5800936.idx  v1_binary_codec.hpp.F824E1C2D8395AE6.idx  v1_constants.hpp.BA0E7CB51297861F.idx
docs/: EXTENSION.md  architecture.md
include/log_storage/: crc32.hpp  io_util.hpp  log_reader.hpp  log_storage.hpp  log_writer.hpp  record_format.hpp  record_layout.hpp  recovery_manager.hpp
include/log_storage/consumer/: offset_store.hpp
include/log_storage/crypto/: crc32.hpp
include/log_storage/durability/: durability_manager.hpp  durability_mode.hpp
include/log_storage/format/: irecord_codec.hpp  record_decode_status.hpp  v1_binary_codec.hpp  v1_constants.hpp
include/log_storage/io/: byte_io.hpp
include/log_storage/reader/: log_reader.hpp
include/log_storage/recovery/: recovery_manager.hpp
include/log_storage/storage/: durability.hpp  log.hpp  record.hpp  recovery.hpp  segment.hpp
include/log_storage/writer/: durable_log_writer.hpp  log_writer.hpp
log_aggregator/: __init__.py  durability.py  log.py  record_encoder.py  segment.py
src/: __init__.py  crc32.cpp  io_util.cpp  log_reader.cpp  log_writer.cpp  record_layout.cpp  recovery_manager.cpp
src/consumer/: __init__.py  manager.py  offset_store.py
src/durability/: __init__.py  manager.py
src/formats/: __init__.py  record_encoder.py
src/log_storage/consumer/: offset_store.cpp
src/log_storage/crypto/: crc32.cpp
src/log_storage/durability/: durability_manager.cpp
src/log_storage/format/: v1_binary_codec.cpp
src/log_storage/io/: byte_io.cpp
src/log_storage/reader/: log_reader.cpp
src/log_storage/recovery/: recovery_manager.cpp
src/log_storage/storage/: durability.cpp  log.cpp  record.cpp  recovery.cpp  segment.cpp
src/log_storage/writer/: durable_log_writer.cpp  log_writer.cpp
src/messaging/: __init__.py  group_coordinator.py  group_offset_store.py  partitioned_engine.py  topic_manager.py
src/read/: __init__.py  log_reader.py
src/storage/: __init__.py  log.py  segment.py
src/testing/: __init__.py  failure_injector.py
tests/: crash_simulation.cpp  durability_test.cpp  durability_tests.cpp  recovery_tests.cpp  test_consumer.py  test_durability.py  test_failure_recovery.py  test_log_engine.py  test_partitioned_groups.py  test_week2_durability.py
wal_py/: __init__.py  durability_manager.py  durable_wal.py  record_format.py  recovery.py
